# mccole

./: .gitignore  README.md  config.py  pyproject.toml  try-mccole.py
info/: bibliography.bib  links.yml
lib/mccole/: mccole.mk
src/first/: index.md
src/second/: index.md
